tests/ext/invalid/While_CompileFail_1.whiley
void System::main([string] args):
    j=0
    while(j < |args|):
        i = 1
        j = j + 1
    debug str(i)
